[backend] refact